2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b10

 * Fix: Links to other method in slideshow were missing.

 * New: Made folder for slideshow icons.

 * Change: Using new icon for "stop" in slideshow.

   Thanks for this icon to Peter Schumacher.

2006-11-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b9

 * Fix: Clicking as non admin on a (sub-)album that needs upgrade failed.

 * Change: make page header a little heigher.

 * Change: If less then 2 item option in thumbs view,
	   then only icons are showed.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b8

 * Change: RFE #983979
	
	   Text for login is more descriptive.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b7

 * Fix: Show descriptionbox in photo view only if there IS a description.

2006-11-03 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b6

 * NEW: RFE #556928

	A short link is shown in the thumbnail view.
	After clicking, a nice panel with the description is shown.
	Its dragable, so you can move it all over the screen.

 * New: function readMoreBox()

2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b5

 * Change: Add possibility to change the brush color in imapmap.

 * New: possibbility to call a callBack() function from colorpicker.
	Thanks to valiant for help ;)

2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b4

 * Fix: Text with linebreaks didnt work in imagemap description.

2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b3

 * Fix: Return link from publish XP docs was wrong.
	Thanks to Peter Schumacher.

 * Fix: css in tabs in add_photos popup.

2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b2

 * Fix: Rotating and flipping.

 * Change: Performing an transpose action with NetPBM now requires 10.13+

2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b1

 * Fix: Check wether an Id was already used in makeFormIntro() 
	to avoid inavlid HTML.

 * Fix: When moving, or reordering, deleting etc. in an album,
	the (new) higlightIndex was not updated.
