@@ -537,3 +537,7 @@ table.g-albums-table .g-albumdesc-cell {
 .g-adminbar {
     margin-top: 1px;
 }
+
+.g-random-block, .g-feature-block {
+    text-align: center;
+}
